# log4g

./: .defaults  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  bootstrap  configure.ac  development.html  documentation.html  download-linux.html  download.html  index.html  log4g.css  log4g.pc.in
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am
doc/unstable/: Log4g.html  Log4gBasicConfigurator.html  Log4gErrorQuark.html  Log4gInternalLogging.html  annotated.html  api-index-deprecated.html  api-index-full.html  appender-attachable-impl_8h.html  appender-attachable_8h.html  appender-skeleton_8h.html  appender_8h.html  async-appender_8h.html  basic-configurator_8h.html  ch02.html  classes.html  configurator_8h.html  console-appender_8h.html  counting-quiet-writer_8h.html  date-layout_8h.html  default-logger-factory_8h.html  default-repository-selector_8h.html  deny-all-filter_8h.html  disable_8h.html  dom-configurator_8h.html  error-handler_8h.html  error_8h.html  file-appender_8h.html  files.html  filter_8h.html  functions.html  functions_vars.html  globals.html  globals_0x66.html  globals_0x69.html  globals_0x6c.html  globals_0x6d.html  globals_0x6e.html  globals_0x72.html  globals_0x74.html  globals_defs.html  (+203 more)
doc/unstable/search/: all_5f.html  all_61.html  all_63.html  all_64.html  all_65.html  all_66.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_77.html  classes_5f.html  classes_6c.html  defines_6c.html  enums_6c.html  enumvalues_66.html  enumvalues_69.html  enumvalues_6c.html  enumvalues_6d.html  enumvalues_6e.html  enumvalues_72.html  enumvalues_74.html  files_61.html  files_62.html  files_63.html  files_64.html  files_65.html  files_66.html  files_6c.html  files_6d.html  files_6e.html  files_6f.html  files_70.html  (+24 more)
docs/reference/log4g/: Makefile.am  introduction.sgml  log4g-docs.sgml  log4g-sections.txt
log4g/: Makefile.am  appender-attachable-impl.c  appender-attachable.c  appender.c  appender.h  basic-configurator.c  basic-configurator.h  configurator.c  default-logger-factory.c  default-module-loader.c  default-repository-selector.c  disable.h  dom-configurator.c  dom-configurator.h  enum-types.c.template  enum-types.h.template  error-handler.c  error.c  error.h  filter.c  filter.h  hierarchy.c  hierarchy.h  layout.c  layout.h  level.c  level.h  log-manager.c  log-manager.h  log.c  log4g.c  log4g.dtd  log4g.h  logger-factory.c  logger-repository.c  logger.c  logger.h  logging-event.c  logging-event.h  marshal.c  (+15 more)
log4g/helpers/: appender-attachable-impl.h  default-logger-factory.h  default-module-loader.h  default-repository-selector.h  log.h  only-once-error-handler.h  thread.h
log4g/interface/: appender-attachable.h  configurator.h  error-handler.h  logger-factory.h  logger-repository.h  module-loader.h  repository-selector.h
log4g/support/: marshal.c  marshal.h
modules/appenders/: Makefile.am  async-appender.c  async-appender.h  console-appender.c  console-appender.h  couchdb-appender.h  counting-quiet-writer.c  counting-quiet-writer.h  file-appender.c  file-appender.h  module.c  null-appender.c  null-appender.h  quiet-writer.c  quiet-writer.h  rolling-file-appender.c  rolling-file-appender.h  syslog-appender.c  syslog-appender.h  writer-appender.c  writer-appender.h
modules/appenders/appender/: async-appender.h  console-appender.h  file-appender.h  null-appender.h  rolling-file-appender.h  syslog-appender.h  writer-appender.h
modules/appenders/helpers/: counting-quiet-writer.h  quiet-writer.h
modules/couchdb/: Makefile.am  couchdb-appender.c  couchdb-appender.h  couchdb-layout.c  couchdb-layout.h  couchdb.c  module.c
modules/couchdb/appender/: couchdb-appender.h
modules/filters/: Makefile.am  deny-all-filter.c  level-match-filter.c  level-match-filter.h  level-range-filter.c  level-range-filter.h  module.c  regex-filter.c  string-match-filter.c  string-match-filter.h
modules/layouts/: Makefile.am  date-layout.c  date-layout.h  html-layout.c  html-layout.h  json-layout.c  module.c  pattern-converter.c  pattern-converter.h  pattern-layout.c  pattern-layout.h  pattern-parser.c  pattern-parser.h  simple-layout.c  simple-layout.h  ttcc-layout.c  ttcc-layout.h  xml-layout.c  xml-layout.h
src/: CMakeLists.txt  Makefile.am  appender-attachable-impl.c  appender-attachable.c  appender-skeleton.c  appender.c  async-appender.c  basic-configurator.c  configurator.c  console-appender.c  couchdb-appender.c  couchdb-layout.c  counting-quiet-writer.c  date-layout.c  default-logger-factory.c  default-module-loader.c  default-repository-selector.c  deny-all-filter.c  dom-configurator.c  error-handler.c  error.c  file-appender.c  filter.c  hierarchy.c  html-layout.c  layout.c  level-match-filter.c  level-range-filter.c  level.c  log-manager.c  log.c  log4g.c  logger-factory.c  logger-repository.c  logger.c  logging-event.c  mdc.c  module.c  ndc.c  null-appender.c  (+17 more)
src/log4g/: basic-configurator.h  disable.h  dom-configurator.h  error.h  filter.h  hierarchy.h  layout.h  level.h  log-manager.h  log4g.h  logger.h  logging-event.h  mdc.h  module.h  ndc.h  provision-node.h  root-logger.h
src/log4g/helpers/: log.h  (+10 more)
tests/: CMakeLists.txt  Makefile.am  appender-attachable-impl-test.c  async-appender-test.c  basic-configurator-test.c  console-appender-test.c  couchdb-appender-test.c  couchdb-layout-test.c  deny-all-filter-test.c  dom-configurator-001.xml  dom-configurator-test.c  file-appender-test.c  hierarchy-test.c  html-layout-test.c  json-layout-test.c  level-match-filter-test.c  level-range-filter-test.c  level-test.c  log4g-test.c  logger-test.c  mdc-test.c  module-test.c  ndc-test.c  only-once-error-handler-test.c  pattern-layout-test.c  perf-001.xml  provision-node-test.c  quiet-writer-test.c  regex-filter-test.c  rolling-file-appender-test.c  simple-layout-test.c  string-match-filter-test.c  syslog-appender-test.c  ttcc-layout-test.c  writer-appender-test.c  xml-layout-test.c
(+68 files in other folders)
